--- a/deploy/nginx/admin.usdt2026.cc.conf
+++ b/deploy/nginx/admin.usdt2026.cc.conf
@@ -1,31 +1,31 @@
-# Web Admin 後台
+# Admin 後台 (HTTP 版本，部署後使用 certbot 添加 SSL)
 server {
     listen 80;
     server_name admin.usdt2026.cc;
-    return 301 https://$server_name$request_uri;
-}
 
-server {
-    listen 443 ssl http2;
-    server_name admin.usdt2026.cc;
+    # 管理後台靜態文件
+    root /opt/luckyred/admin/dist;
+    index index.html;
 
-    ssl_certificate /etc/letsencrypt/live/admin.usdt2026.cc/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/admin.usdt2026.cc/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-
-    location / {
-        proxy_pass http://127.0.0.1:8081/;
+    # API 代理
+    location /api/ {
+        proxy_pass http://127.0.0.1:8080/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    # 前端路由 (SPA)
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
     # 安全頭
-    add_header X-Frame-Options "DENY" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 }
-
