--- a/deploy/nginx/mini.usdt2026.cc.conf
+++ b/deploy/nginx/mini.usdt2026.cc.conf
@@ -1,18 +1,7 @@
-# MiniApp 前端 + API
+# MiniApp 前端 + API (HTTP 版本，部署後使用 certbot 添加 SSL)
 server {
     listen 80;
     server_name mini.usdt2026.cc;
-    return 301 https://$server_name$request_uri;
-}
-
-server {
-    listen 443 ssl http2;
-    server_name mini.usdt2026.cc;
-
-    ssl_certificate /etc/letsencrypt/live/mini.usdt2026.cc/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/mini.usdt2026.cc/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
 
     # 前端靜態文件
     root /opt/luckyred/frontend/dist;
@@ -46,4 +35,3 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 }
-
